[package]
name = "romnomnom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.4"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.2"
parking_lot = "0.12.1"
regex = "1.7.1"
tokio = { version = "1.24.1", features = ["macros", "fs", "rt"] }
